👁📺 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <body>
    
       <h1>Do you know my name?</h1>
+    <h2>
+      Cassie's Disappeaering Ghost Project
+    </h2>
         <div class="main">
             <img class="ghost-image" src="https://ih1.redbubble.net/image.153656513.6605/flat,800x800,075,f.jpg">
             <div class="buttons">
